#FLOPOP-XXX: Implement movable, detachable function for popover.

--- a/FLOPopupPrototypes/UI/Scenes/NewsViewController/NewsViewController.xib
+++ b/FLOPopupPrototypes/UI/Scenes/NewsViewController/NewsViewController.xib
@@ -31,7 +31,7 @@
                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                 <tableColumns>
-                                    <tableColumn identifier="" width="477" minWidth="40" maxWidth="1000" id="9or-cM-Yh7">
+                                    <tableColumn identifier="NewsCellViewColumn" width="477" minWidth="40" maxWidth="1000" id="9or-cM-Yh7">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
                                             <font key="font" metaFont="smallSystem"/>
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
