--- a/FLOPopupPrototypes/UI/Scenes/DataViewController/DataViewController.xib
+++ b/FLOPopupPrototypes/UI/Scenes/DataViewController/DataViewController.xib
@@ -31,7 +31,7 @@
                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                 <tableColumns>
-                                    <tableColumn identifier="" width="477" minWidth="40" maxWidth="1000" id="quQ-GL-oOY">
+                                    <tableColumn identifier="DataCellViewColumn" width="477" minWidth="40" maxWidth="1000" id="quQ-GL-oOY">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
                                             <font key="font" metaFont="smallSystem"/>
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
