#FLOPOP-XXX: Implement alwaysOnTop feature for Popover view or window. * Refactoring codes.

--- a/FLOPopupPrototypes/UI/Scenes/NewsViewController/NewsViewController.xib
+++ b/FLOPopupPrototypes/UI/Scenes/NewsViewController/NewsViewController.xib
@@ -20,7 +20,7 @@
             <subviews>
                 <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7lu-CP-cFj">
                     <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
-                    <clipView key="contentView" id="uBY-Zc-afI">
+                    <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="uBY-Zc-afI">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
