--- a/FLOPopupPrototypes/UI/Scenes/FilmsViewController/FilmsViewController.xib
+++ b/FLOPopupPrototypes/UI/Scenes/FilmsViewController/FilmsViewController.xib
@@ -8,6 +8,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="FilmsViewController">
             <connections>
+                <outlet property="collectionViewData" destination="yQN-FJ-RpZ" id="1Nf-uo-4ds"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
         </customObject>
@@ -23,7 +24,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView id="yQN-FJ-RpZ">
+                            <collectionView selectable="YES" id="yQN-FJ-RpZ">
                                 <rect key="frame" x="0.0" y="0.0" width="480" height="158"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumInteritemSpacing="10" minimumLineSpacing="10" id="xth-Bt-nOa">
