--- a/FLOPopupPrototypes/UI/ViewComponents/FilmCellView/FilmCellView.xib
+++ b/FLOPopupPrototypes/UI/ViewComponents/FilmCellView/FilmCellView.xib
@@ -6,22 +6,23 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="FilmCellView">
+        <customObject id="-2" userLabel="File's Owner"/>
+        <collectionViewItem nibName="FilmCellView" identifier="FilmCellView" id="4EO-xj-URN" customClass="FilmCellView">
             <connections>
-                <outlet property="imgView" destination="X06-8S-Jl4" id="QG0-1s-J1C"/>
-                <outlet property="lblTitle" destination="1QH-jO-g1V" id="fa3-81-RE0"/>
-                <outlet property="vContainer" destination="RrJ-YO-AKo" id="Z3z-Pi-MbC"/>
-                <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
+                <outlet property="imgView" destination="X06-8S-Jl4" id="3dK-Vm-Vh5"/>
+                <outlet property="lblName" destination="1QH-jO-g1V" id="XWo-02-A5S"/>
+                <outlet property="vContainer" destination="RrJ-YO-AKo" id="PLw-tO-YEc"/>
+                <outlet property="view" destination="Hz6-mo-xeY" id="bDC-n7-lki"/>
             </connections>
-        </customObject>
+        </collectionViewItem>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="222"/>
+        <customView identifier="FilmCellView" id="Hz6-mo-xeY">
+            <rect key="frame" x="0.0" y="0.0" width="480" height="232"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="RrJ-YO-AKo" userLabel="View Container">
-                    <rect key="frame" x="15" y="5" width="450" height="212"/>
+                    <rect key="frame" x="15" y="10" width="450" height="212"/>
                     <subviews>
                         <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="X06-8S-Jl4" userLabel="Image View">
                             <rect key="frame" x="15" y="47" width="420" height="150"/>
@@ -30,9 +31,9 @@
                             </constraints>
                             <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="YhT-3K-qSz"/>
                         </imageView>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="1QH-jO-g1V" userLabel="Lbl Title">
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="1QH-jO-g1V" userLabel="Lbl Name">
                             <rect key="frame" x="13" y="15" width="424" height="17"/>
-                            <textFieldCell key="cell" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="left" title="Title" allowsEditingTextAttributes="YES" id="g3y-iR-KGf">
+                            <textFieldCell key="cell" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="left" title="Name" allowsEditingTextAttributes="YES" id="g3y-iR-KGf">
                                 <font key="font" metaFont="system"/>
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -51,9 +52,9 @@
                 </customView>
             </subviews>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="RrJ-YO-AKo" secondAttribute="bottom" constant="5" id="4Mj-iW-Pja"/>
+                <constraint firstAttribute="bottom" secondItem="RrJ-YO-AKo" secondAttribute="bottom" constant="10" id="4Mj-iW-Pja"/>
                 <constraint firstAttribute="trailing" secondItem="RrJ-YO-AKo" secondAttribute="trailing" constant="15" id="5f1-D8-A2a"/>
-                <constraint firstItem="RrJ-YO-AKo" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="5" id="Sou-x9-Ef0"/>
+                <constraint firstItem="RrJ-YO-AKo" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="10" id="Sou-x9-Ef0"/>
                 <constraint firstItem="RrJ-YO-AKo" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="15" id="gcp-3k-5L4"/>
             </constraints>
             <point key="canvasLocation" x="132" y="205"/>
