--- a/FLOPopupPrototypes/UI/Scenes/DataViewController/DataViewController.xib
+++ b/FLOPopupPrototypes/UI/Scenes/DataViewController/DataViewController.xib
@@ -10,28 +10,32 @@
             <connections>
                 <outlet property="outlineViewData" destination="Sfw-WA-wQj" id="Eng-BZ-obo"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
+                <outlet property="visualEVBackground" destination="8iT-gv-rfn" id="R0T-8R-rJl"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
+            <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
+                <visualEffectView appearanceType="vibrantDark" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="249" verticalCompressionResistancePriority="249" blendingMode="behindWindow" material="dark" state="active" translatesAutoresizingMaskIntoConstraints="NO" id="8iT-gv-rfn">
+                    <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
+                </visualEffectView>
                 <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d8a-W8-Rpw" userLabel="Outline View Data">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
+                    <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
                     <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="6Jb-dy-LcH">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
+                        <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" multipleSelection="NO" autosaveColumns="NO" indentationPerLevel="16" outlineTableColumn="quQ-GL-oOY" id="Sfw-WA-wQj" customClass="CustomNSOutlineView">
-                                <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
+                                <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                 <tableColumns>
-                                    <tableColumn identifier="DataCellViewColumn" width="477" minWidth="40" maxWidth="1000" id="quQ-GL-oOY">
+                                    <tableColumn identifier="DataCellViewColumn" width="797" minWidth="40" maxWidth="1000" id="quQ-GL-oOY">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
                                             <font key="font" metaFont="smallSystem"/>
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -59,10 +63,14 @@
                 </scrollView>
             </subviews>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="d8a-W8-Rpw" secondAttribute="trailing" id="0Bp-ZH-LtF"/>
-                <constraint firstItem="d8a-W8-Rpw" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="2r8-yx-8q6"/>
-                <constraint firstAttribute="bottom" secondItem="d8a-W8-Rpw" secondAttribute="bottom" id="Rqh-53-So3"/>
-                <constraint firstItem="d8a-W8-Rpw" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="xPH-mk-QjF"/>
+                <constraint firstAttribute="bottom" secondItem="8iT-gv-rfn" secondAttribute="bottom" id="0dz-6S-5XZ"/>
+                <constraint firstAttribute="bottom" secondItem="d8a-W8-Rpw" secondAttribute="bottom" id="2Ah-es-MRW"/>
+                <constraint firstItem="8iT-gv-rfn" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="cx0-ZC-i6B"/>
+                <constraint firstItem="d8a-W8-Rpw" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="dBn-xn-7P0"/>
+                <constraint firstAttribute="trailing" secondItem="d8a-W8-Rpw" secondAttribute="trailing" id="fEs-7Q-dcN"/>
+                <constraint firstItem="8iT-gv-rfn" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="fdQ-bV-BtO"/>
+                <constraint firstAttribute="trailing" secondItem="8iT-gv-rfn" secondAttribute="trailing" id="fnX-bc-Z2r"/>
+                <constraint firstItem="d8a-W8-Rpw" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="jBb-pc-CVc"/>
             </constraints>
         </customView>
     </objects>
