--- a/FLOPopupPrototypes/UI/Scenes/NewsViewController/NewsViewController.xib
+++ b/FLOPopupPrototypes/UI/Scenes/NewsViewController/NewsViewController.xib
@@ -10,28 +10,32 @@
             <connections>
                 <outlet property="tableViewData" destination="ZTi-NY-wyo" id="vnC-ed-7co"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
+                <outlet property="visualEVBackground" destination="eeG-qe-eUm" id="OCq-VJ-3wL"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
+            <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
+                <visualEffectView appearanceType="vibrantDark" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="249" verticalCompressionResistancePriority="249" blendingMode="behindWindow" material="dark" state="active" translatesAutoresizingMaskIntoConstraints="NO" id="eeG-qe-eUm">
+                    <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
+                </visualEffectView>
                 <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7lu-CP-cFj">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
+                    <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
                     <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="uBY-Zc-afI">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
+                        <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" id="ZTi-NY-wyo" userLabel="Table View Data">
-                                <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
+                                <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                 <tableColumns>
-                                    <tableColumn identifier="NewsCellViewColumn" width="477" minWidth="40" maxWidth="1000" id="9or-cM-Yh7">
+                                    <tableColumn identifier="NewsCellViewColumn" width="797" minWidth="40" maxWidth="1000" id="9or-cM-Yh7">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
                                             <font key="font" metaFont="smallSystem"/>
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -59,10 +63,14 @@
                 </scrollView>
             </subviews>
             <constraints>
-                <constraint firstItem="7lu-CP-cFj" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="8eV-W8-5Pm"/>
-                <constraint firstAttribute="bottom" secondItem="7lu-CP-cFj" secondAttribute="bottom" id="CIa-7k-zLG"/>
-                <constraint firstItem="7lu-CP-cFj" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="Cun-hX-Dkj"/>
-                <constraint firstAttribute="trailing" secondItem="7lu-CP-cFj" secondAttribute="trailing" id="NcD-Cf-Xq9"/>
+                <constraint firstItem="7lu-CP-cFj" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="0fo-a2-EwA"/>
+                <constraint firstAttribute="bottom" secondItem="7lu-CP-cFj" secondAttribute="bottom" id="4SY-Zp-lVO"/>
+                <constraint firstItem="eeG-qe-eUm" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="6PX-qN-Uxx"/>
+                <constraint firstAttribute="trailing" secondItem="7lu-CP-cFj" secondAttribute="trailing" id="Bia-eB-e3m"/>
+                <constraint firstAttribute="bottom" secondItem="eeG-qe-eUm" secondAttribute="bottom" id="Jwr-7f-PEy"/>
+                <constraint firstItem="eeG-qe-eUm" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="Voh-mf-gv6"/>
+                <constraint firstItem="7lu-CP-cFj" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="lcd-ih-e4y"/>
+                <constraint firstAttribute="trailing" secondItem="eeG-qe-eUm" secondAttribute="trailing" id="qEC-8A-pJE"/>
             </constraints>
         </customView>
     </objects>
