--- a/FLOPopupPrototypes/UI/Storyboards/Main.storyboard
+++ b/FLOPopupPrototypes/UI/Storyboards/Main.storyboard
@@ -717,8 +717,29 @@
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="WeF-sb-hLO" userLabel="View Menu">
                                 <rect key="frame" x="0.0" y="1750" width="2800" height="50"/>
                                 <subviews>
+                                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="xay-PV-jAd" userLabel="View Change Mode">
+                                        <rect key="frame" x="10" y="5" width="161" height="40"/>
+                                        <subviews>
+                                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="4P3-pJ-IwM" userLabel="Btn Change Mode">
+                                                <rect key="frame" x="10" y="0.0" width="141" height="40"/>
+                                                <buttonCell key="cell" type="bevel" title="Change Window Mode" bezelStyle="rounded" alignment="center" imageScaling="proportionallyDown" inset="2" id="Ss8-Oo-Zez">
+                                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                                    <font key="font" metaFont="system"/>
+                                                </buttonCell>
+                                                <connections>
+                                                    <action selector="btnChangeMode_clicked:" target="XfG-lQ-9wD" id="x2f-x3-U7e"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="4P3-pJ-IwM" secondAttribute="trailing" constant="10" id="KIY-n9-g0w"/>
+                                            <constraint firstItem="4P3-pJ-IwM" firstAttribute="top" secondItem="xay-PV-jAd" secondAttribute="top" id="cLC-PN-wQl"/>
+                                            <constraint firstAttribute="bottom" secondItem="4P3-pJ-IwM" secondAttribute="bottom" id="hEP-TL-w8n"/>
+                                            <constraint firstItem="4P3-pJ-IwM" firstAttribute="leading" secondItem="xay-PV-jAd" secondAttribute="leading" constant="10" id="jQU-b2-WkO"/>
+                                        </constraints>
+                                    </customView>
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="uQl-Vp-Bbc" userLabel="View Show Window Popup">
-                                        <rect key="frame" x="10" y="5" width="152" height="40"/>
+                                        <rect key="frame" x="181" y="5" width="152" height="40"/>
                                         <subviews>
                                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Bii-Nb-7uf" userLabel="Btn Show Window Popup">
                                                 <rect key="frame" x="10" y="0.0" width="132" height="40"/>
@@ -739,7 +760,7 @@
                                         </constraints>
                                     </customView>
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="hH7-0V-lua" userLabel="View Show View Popup">
-                                        <rect key="frame" x="172" y="5" width="133" height="40"/>
+                                        <rect key="frame" x="343" y="5" width="133" height="40"/>
                                         <subviews>
                                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QKT-rF-oHD" userLabel="Btn Show View Popup">
                                                 <rect key="frame" x="10" y="0.0" width="113" height="40"/>
@@ -782,12 +803,15 @@
                                     </customView>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="xay-PV-jAd" secondAttribute="bottom" constant="5" id="514-Yd-B5e"/>
+                                    <constraint firstItem="uQl-Vp-Bbc" firstAttribute="leading" secondItem="xay-PV-jAd" secondAttribute="trailing" constant="10" id="5cg-44-qxz"/>
                                     <constraint firstItem="uQl-Vp-Bbc" firstAttribute="top" secondItem="WeF-sb-hLO" secondAttribute="top" constant="5" id="ClT-Wa-q1d"/>
                                     <constraint firstAttribute="height" constant="50" id="Ejm-YL-M96"/>
                                     <constraint firstItem="4xE-ia-sMm" firstAttribute="top" secondItem="WeF-sb-hLO" secondAttribute="top" constant="5" id="KXJ-ym-K9X"/>
                                     <constraint firstAttribute="bottom" secondItem="4xE-ia-sMm" secondAttribute="bottom" constant="5" id="LwG-a5-vap"/>
+                                    <constraint firstItem="xay-PV-jAd" firstAttribute="top" secondItem="WeF-sb-hLO" secondAttribute="top" constant="5" id="MB5-E1-GBx"/>
+                                    <constraint firstItem="xay-PV-jAd" firstAttribute="leading" secondItem="WeF-sb-hLO" secondAttribute="leading" constant="10" id="Swf-ZO-XjU"/>
                                     <constraint firstAttribute="bottom" secondItem="uQl-Vp-Bbc" secondAttribute="bottom" constant="5" id="Xac-pm-bgD"/>
-                                    <constraint firstItem="uQl-Vp-Bbc" firstAttribute="leading" secondItem="WeF-sb-hLO" secondAttribute="leading" constant="10" id="ZgK-qk-aes"/>
                                     <constraint firstItem="hH7-0V-lua" firstAttribute="top" secondItem="WeF-sb-hLO" secondAttribute="top" constant="5" id="eP9-zC-kWh"/>
                                     <constraint firstItem="hH7-0V-lua" firstAttribute="leading" secondItem="uQl-Vp-Bbc" secondAttribute="trailing" constant="10" id="j8I-66-lOy"/>
                                     <constraint firstAttribute="trailing" secondItem="4xE-ia-sMm" secondAttribute="trailing" constant="10" id="lYE-jv-njK"/>
@@ -806,9 +830,11 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="btnChangeMode" destination="4P3-pJ-IwM" id="fyA-Lo-gTI"/>
                         <outlet property="btnShowDataMix" destination="95S-F2-TuG" id="gKP-su-Kjp"/>
                         <outlet property="btnShowViewPopup" destination="QKT-rF-oHD" id="0ar-uo-Jdf"/>
                         <outlet property="btnShowWindowPopup" destination="Bii-Nb-7uf" id="SFC-h3-Raf"/>
+                        <outlet property="vChangeMode" destination="xay-PV-jAd" id="hlF-bq-hy0"/>
                         <outlet property="vMenu" destination="WeF-sb-hLO" id="K56-IL-buD"/>
                         <outlet property="vShowDataMix" destination="4xE-ia-sMm" id="2uO-9m-U9e"/>
                         <outlet property="vShowViewPopup" destination="hH7-0V-lua" id="6Fh-4q-Gsj"/>
